# llm-proxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml
examples/: config.json
rules/: conditions-and-state.txt  output-and-restraint.txt  research-and-retrieval.txt  security.txt  side-effect-channels.txt  task-execution.txt  tool-calls.txt  tool-required.txt
src/: config.rs  fortify.rs  forward.rs  inject.rs  main.rs
src/fortify/: rescue.rs  schema.rs  stream.rs
