[package]
name = "llm-proxy"
version = "0.1.0"
edition = "2021"
description = "Lightweight high-performance proxy for per-model parameter injection and model name rewriting"
repository = "https://github.com/nicco/llm-proxy"

[dependencies]
axum = { version = "0.8", features = ["json"] }
bytes = "1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["trace", "cors"] }
http-body-util = "0.1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
regex = "1"
